--- a/src/main/resources/fxml/admin_page.fxml
+++ b/src/main/resources/fxml/admin_page.fxml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.Cursor?>
-<GridPane fx:id="root" prefHeight="500" prefWidth="800" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.schoolsystem.ui.panel.AdminPanelPage">
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<?import java.lang.String?>
+<GridPane styleClass="bg-background" fx:id="root" prefHeight="500" prefWidth="800"
+        xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+        fx:controller="com.project.schoolsystem.ui.panel.AdminPanelPage">
     <stylesheets>
-        <String fx:value="/css/theme.css" />
+        <String fx:value="/css/theme.css"/>
     </stylesheets>
 
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <VBox maxHeight="Infinity" prefWidth="150" styleClass="bg-primary" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <HBox alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="60">
@@ -48,9 +50,9 @@
                 </cursor>
             </Label>
             <Region HBox.hgrow="ALWAYS" />
-            <JFXButton prefHeight="40" prefWidth="40">
+            <JFXButton prefHeight="40" prefWidth="40" onAction="#onSettingClicked">
                 <graphic>
-                    <FontAwesomeIconView fx:id="iconCog" fill="white" glyphName="COG" size="16" />
+                    <FontAwesomeIconView fx:id="iconCog" fill="white" glyphName="COG" size="16"/>
                 </graphic>
             </JFXButton>
         </HBox>
