--- a/src/main/resources/fxml/teacher_page.fxml
+++ b/src/main/resources/fxml/teacher_page.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.text.Font?>
+<?import java.lang.String?>
 <GridPane fx:id="root" prefHeight="500" prefWidth="800" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.schoolsystem.ui.panel.TeacherPanelPage">
     <stylesheets>
         <String fx:value="/css/theme.css" />
@@ -23,9 +23,9 @@
     </rowConstraints>
     <VBox maxHeight="Infinity" prefWidth="150" styleClass="bg-primary" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <HBox alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="60">
-            <Label text="Organization" textFill="white">
+            <Label text="Organization" textFill="white" fx:id="labelOrganizationTitle">
                 <font>
-                    <Font name="System Bold" size="16.0" />
+                    <Font name="System Bold" size="16.0"/>
                 </font>
             </Label>
             <padding>
@@ -49,9 +49,9 @@
                 </cursor>
             </Label>
             <Region HBox.hgrow="ALWAYS" />
-            <JFXButton prefHeight="40" prefWidth="40">
+            <JFXButton prefHeight="40" prefWidth="40" onAction="#onSettingClicked">
                 <graphic>
-                    <FontAwesomeIconView fx:id="iconCog" fill="white" glyphName="COG" size="16" />
+                    <FontAwesomeIconView fx:id="iconCog" fill="white" glyphName="COG" size="16"/>
                 </graphic>
             </JFXButton>
         </HBox>
