completed manage teacher ui, implemented search feature for teachers

--- a/src/main/resources/fxml/teacher_page.fxml
+++ b/src/main/resources/fxml/teacher_page.fxml
@@ -9,17 +9,19 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import java.lang.String?>
-<GridPane fx:id="root" prefHeight="500" prefWidth="800" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.schoolsystem.ui.panel.TeacherPanelPage">
+<GridPane styleClass="bg-background" fx:id="root" prefHeight="500" prefWidth="800"
+        xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+        fx:controller="com.project.schoolsystem.ui.panel.TeacherPanelPage">
     <stylesheets>
-        <String fx:value="/css/theme.css" />
+        <String fx:value="/css/theme.css"/>
     </stylesheets>
 
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <VBox maxHeight="Infinity" prefWidth="150" styleClass="bg-primary" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <HBox alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="60">
