--- a/src/main/resources/fxml/add_teacher.fxml
+++ b/src/main/resources/fxml/add_teacher.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.*?>
-<VBox xmlns="http://javafx.com/javafx"
+<VBox fx:id="root" xmlns="http://javafx.com/javafx"
         xmlns:fx="http://javafx.com/fxml"
         fx:controller="com.project.schoolsystem.ui.manageteachers.AddTeacherPage"
         spacing="15" alignment="CENTER" stylesheets="/css/theme.css">
@@ -13,30 +13,32 @@
         <ToggleGroup fx:id="toggleGroupGender"/>
     </fx:define>
 
-    <JFXTextField promptText="Username"/>
-    <JFXTextField promptText="Password"/>
-    <JFXTextField promptText="Name"/>
+    <JFXTextField fx:id="fieldUserName" promptText="User Name"/>
+    <JFXTextField fx:id="fieldPassword" promptText="Password"/>
+    <JFXTextField fx:id="fieldName" promptText="Name"/>
     <HBox spacing="10" alignment="CENTER_LEFT">
         <Label text="Date of Birth:"/>
-        <JFXDatePicker HBox.hgrow="ALWAYS" maxWidth="Infinity"/>
+        <JFXDatePicker fx:id="datePickerDob" HBox.hgrow="ALWAYS" maxWidth="Infinity"/>
     </HBox>
     <GridPane>
         <columnConstraints>
-            <ColumnConstraints fillWidth="true" hgrow="ALWAYS"/>
+            <ColumnConstraints hgrow="ALWAYS"/>
             <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS"/>
             <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS"/>
         </columnConstraints>
 
         <Label text="Gender:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <JFXRadioButton text="Male" GridPane.rowIndex="0" GridPane.columnIndex="1" toggleGroup="$toggleGroupGender"/>
-        <JFXRadioButton text="Female" GridPane.rowIndex="0" GridPane.columnIndex="2" toggleGroup="$toggleGroupGender"/>
+        <JFXRadioButton fx:id="btnRadioMale" text="Male" GridPane.rowIndex="0" GridPane.columnIndex="1"
+                toggleGroup="$toggleGroupGender"/>
+        <JFXRadioButton fx:id="btnRadioFemale" text="Female" GridPane.rowIndex="0" GridPane.columnIndex="2"
+                toggleGroup="$toggleGroupGender"/>
     </GridPane>
-    <JFXTextField promptText="CNIC"/>
-    <JFXTextField promptText="Contact"/>
-    <JFXTextField promptText="Emergency Contact"/>
-    <JFXTextField promptText="Qualification"/>
-    <JFXTextArea promptText="Address" prefRowCount="2"/>
-    <JFXButton text="Add" styleClass="btn-secondary" prefWidth="100"/>
+    <JFXTextField fx:id="fieldCnic" promptText="CNIC"/>
+    <JFXTextField fx:id="fieldContact" promptText="Contact"/>
+    <JFXTextField fx:id="fieldEmergencyContact" promptText="Emergency Contact"/>
+    <JFXTextField fx:id="fieldQualification" promptText="Qualification"/>
+    <JFXTextArea fx:id="fieldAddress" promptText="Address" prefRowCount="2"/>
+    <JFXButton onAction="#onAddTeacher" text="Add" styleClass="btn-secondary" prefWidth="100"/>
     <padding>
         <Insets left="50" right="50" top="15" bottom="15"/>
     </padding>
