--- a/src/main/resources/fxml/session_page.fxml
+++ b/src/main/resources/fxml/session_page.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import java.lang.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.text.Font?>
+<?import java.lang.String?>
 <VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.schoolsystem.ui.session.SessionPage">
     <stylesheets>
         <String fx:value="/css/theme.css" />
@@ -44,20 +45,26 @@
                     <HBox HBox.hgrow="ALWAYS" alignment="CENTER" style="-fx-border-color: grey; -fx-border-width: 1; -fx-border-radius: 3;">
                         <FontAwesomeIconView glyphName="SEARCH">
                             <HBox.margin>
-                               <Insets right="5.0" />
+                                <Insets right="5.0"/>
                             </HBox.margin>
                         </FontAwesomeIconView>
-                        <TextField promptText="Search" HBox.hgrow="ALWAYS" styleClass="text-field-clear"/>
+                        <TextField fx:id="fieldSearch" promptText="Search" HBox.hgrow="ALWAYS"
+                                styleClass="text-field-clear"/>
                         <padding>
-                            <Insets left="5" right="5" />
+                            <Insets left="5" right="5"/>
                         </padding>
                     </HBox>
+                    <JFXButton prefWidth="5" onAction="#onRefresh">
+                        <graphic>
+                            <FontAwesomeIconView glyphName="REFRESH" fill="grey"/>
+                        </graphic>
+                    </JFXButton>
                     <padding>
-                        <Insets left="10" right="10" />
+                        <Insets left="10"/>
                     </padding>
                 </HBox>
                 <Region prefHeight="10" />
-                <JFXListView VBox.vgrow="ALWAYS" />
+                <JFXListView VBox.vgrow="ALWAYS" fx:id="sessionListV"/>
             </children>
              <padding>
                  <Insets top="10" />
