created gui for student and class page

--- a/src/main/resources/fxml/add_student.fxml
+++ b/src/main/resources/fxml/add_student.fxml
@@ -6,27 +6,25 @@
 <?import javafx.scene.layout.*?>
 <VBox fx:id="root" xmlns="http://javafx.com/javafx"
         xmlns:fx="http://javafx.com/fxml"
-        fx:controller="com.project.schoolsystem.ui.manageteachers.EditTeacherPage"
+        fx:controller="com.project.schoolsystem.ui.students.AddStudentPage"
         prefHeight="400.0" prefWidth="600.0" alignment="CENTER" spacing="10" stylesheets="/css/theme.css">
-    <fx:define>
-        <ToggleGroup fx:id="toggleGroupGender"/>
-    </fx:define>
-
     <GridPane vgap="10" hgap="10">
         <columnConstraints>
             <ColumnConstraints percentWidth="40"/>
             <ColumnConstraints percentWidth="60"/>
         </columnConstraints>
 
-        <Label text="User Name" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <JFXTextField fx:id="fieldUserName" disable="true" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        <Label text="Roll No" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+        <JFXTextField fx:id="fieldRollNo" disable="true" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
-        <Label text="Registration Date" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-        <JFXDatePicker fx:id="datePickerReg" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"
-                minWidth="10" disable="true"/>
+        <Label text="Department" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+        <JFXComboBox fx:id="comboBoxDepartment" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"/>
 
         <Label text="Name" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
         <JFXTextField fx:id="fieldName" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+        <Label text="Parent Name" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+        <JFXTextField fx:id="fieldParentName" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
 
         <Label text="Date of Birth" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
         <JFXDatePicker fx:id="datePickerDob" GridPane.rowIndex="4" GridPane.columnIndex="1" maxWidth="Infinity"
@@ -34,9 +32,9 @@
 
         <Label text="Gender" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
         <HBox GridPane.rowIndex="5" GridPane.columnIndex="1" alignment="CENTER_LEFT">
-            <JFXRadioButton fx:id="btnRadioMale" text="Male" toggleGroup="$toggleGroupGender"/>
+            <JFXRadioButton fx:id="btnRadioMale" text="Male"/>
             <Region HBox.hgrow="ALWAYS"/>
-            <JFXRadioButton fx:id="btnRadioFemale" text="Female" toggleGroup="$toggleGroupGender"/>
+            <JFXRadioButton fx:id="btnRadioFemale" text="Female"/>
         </HBox>
 
         <Label text="Contact" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
@@ -45,21 +43,17 @@
         <Label text="Emergency Contact" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
         <JFXTextField fx:id="fieldEmergencyContact" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
 
-        <Label text="CNIC" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
+        <Label text="B.Form/CNIC" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
         <JFXTextField fx:id="fieldCnic" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
 
-        <Label text="Qualification" GridPane.rowIndex="9" GridPane.columnIndex="0"/>
-        <JFXTextField fx:id="fieldQualification" GridPane.rowIndex="9" GridPane.columnIndex="1"/>
-
-        <Label text="Address" GridPane.rowIndex="10" GridPane.columnIndex="0"/>
-        <TextArea fx:id="fieldAddress" GridPane.rowIndex="10" GridPane.columnIndex="1"
+        <Label text="Address" GridPane.rowIndex="9" GridPane.columnIndex="0"/>
+        <JFXTextArea fx:id="fieldAddress" GridPane.rowIndex="9" GridPane.columnIndex="1"
                 prefWidth="100" prefRowCount="2"/>
+
+        <Label text="Class" GridPane.rowIndex="10" GridPane.columnIndex="0"/>
+        <JFXComboBox GridPane.rowIndex="10" GridPane.columnIndex="1" maxWidth="Infinity"/>
     </GridPane>
-    <HBox spacing="10">
-        <JFXButton text="Save" prefWidth="100" styleClass="btn-secondary" onAction="#onSave"/>
-        <Region HBox.hgrow="ALWAYS"/>
-        <JFXButton text="Deactivate" prefWidth="100" styleClass="btn-secondary" onAction="#onDeactivate"/>
-    </HBox>
+    <JFXButton prefWidth="100" text="Add" styleClass="btn-secondary" onAction="#onAdd"/>
 
     <padding>
         <Insets left="50" right="50"/>
