--- a/src/main/resources/fxml/add_edit_class.fxml
+++ b/src/main/resources/fxml/add_edit_class.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<GridPane xmlns="http://javafx.com/javafx"
+<GridPane fx:id="root" xmlns="http://javafx.com/javafx"
         xmlns:fx="http://javafx.com/fxml"
         fx:controller="com.project.schoolsystem.ui.classes.AddEditClass"
         prefHeight="400.0" prefWidth="600.0" hgap="50" stylesheets="/css/theme.css">
@@ -24,18 +24,18 @@
             </font>
         </Label>
         <HBox>
+            <Label text="Session"/>
+        </HBox>
+        <JFXComboBox maxWidth="Infinity" fx:id="comboxSessionAdd"/>
+        <HBox>
             <Label text="Department"/>
         </HBox>
-        <JFXComboBox maxWidth="Infinity"/>
-        <HBox>
-            <Label text="Title"/>
-        </HBox>
-        <JFXTextField/>
+        <JFXComboBox maxWidth="Infinity" fx:id="comboxDepartmentAdd"/>
         <HBox>
             <Label text="Class Code"/>
         </HBox>
-        <JFXTextField disable="true"/>
-        <JFXButton text="Add" prefWidth="100" styleClass="btn-primary"/>
+        <JFXTextField fx:id="fieldClassCode"/>
+        <JFXButton text="Add" prefWidth="100" styleClass="btn-primary" onAction="#onAdd"/>
     </VBox>
 
     <VBox GridPane.rowIndex="0" GridPane.columnIndex="1" alignment="TOP_CENTER" spacing="10">
@@ -44,27 +44,19 @@
                 <Font name="System Bold"/>
             </font>
         </Label>
-        <HBox spacing="10" alignment="CENTER_LEFT">
-            <Label text="Select"/>
-            <JFXComboBox maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
+        <HBox>
+            <Label text="Session"/>
         </HBox>
+        <JFXComboBox maxWidth="Infinity"/>
         <HBox>
             <Label text="Department"/>
         </HBox>
-        <JFXTextField disable="true"/>
-        <HBox>
-            <Label text="Title"/>
-        </HBox>
-        <JFXTextField/>
+        <JFXComboBox maxWidth="Infinity"/>
         <HBox>
             <Label text="Class Code"/>
         </HBox>
-        <JFXTextField disable="true"/>
-        <HBox spacing="10">
-            <JFXButton text="Save" prefWidth="100" styleClass="btn-primary"/>
-            <Region HBox.hgrow="ALWAYS"/>
-            <JFXButton text="Deactivate" prefWidth="100" styleClass="btn-primary"/>
-        </HBox>
+        <JFXComboBox maxWidth="Infinity"/>
+        <JFXButton text="Deactivate" prefWidth="100" styleClass="btn-primary" onAction="#onDeactivate"/>
     </VBox>
 
     <padding>
